--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "games",
     "browser"
   ],
-  "author": "Learners Guild",
+  "author": "Mike Adossi",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/GuildCrafts/browser-games/issues"
